<resources>
    <string name="app_name">GameLand</string>
    <string name="nav_header_title">GameLand</string>
    <string name="nav_header_subtitle">Sergio Ramirez Cruz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalogo">Catálogo Videojuegos</string>
    <string name="addjuego">Añadir Videojuego</string>
    <string name="tienda">Tienda</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Genero</string>
    <string name="duracion">Duracion</string>
    <string name="informaci_n">Información</string>
    <string name="compartir">Compartir</string>
    <string name="foto">Foto</string>
    <string name="imagen">Imagen</string>
    <string name="titulo">Titulo</string>
    <string name="time">Time</string>
    <string name="contacto">Contacto</string>
    <string name="principal">principal</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="principalm">Principal</string>
    <string name="menu">Menu</string>
    <string name="inicio">inicio</string>
    <string name="Inicio">Inicio</string>
    <string name="proximamente_abriremos">Proximamente Abriremos</string>
    <string name="ps4">PS4</string>
    <string name="pc">PC</string>
    <string name="ofertas">Ofertas</string>
    <string name="xbox">XBOX</string>
    <string name="carrito">Carrito</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">share on twitter</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>
    <string name="nombre_sergio_ramirez_cruz">Nombre: Sergio Ramirez Cruz</string>
    <string name="datos_del_creador">Datos del Creador</string>
    <string name="domicilio_granada">Domicilio: Granada</string>
    <string name="empresa_ies_francisco_ayala">Empresa: IES Francisco Ayala</string>
    <string name="correo_sergioramicruz_gmail_com">Correo: sergioramicruz@gmail.com</string>
    <string name="telefono_605349612">Telefono: 605349612</string>
    <string name="GIF">GIF</string>
    <string name="euros">€</string>
    <string name="precio">Precio</string>
    <string name="introduzca_el_titulo">introduzca el titulo</string>
    <string name="introduzca_el_genero">introduzca el genero</string>
    <string name="introduzca_url_de_foto">introduzca URL de foto</string>
    <string name="caratula">Caratula</string>
    <string name="introduzca_el_precio">introduzca el precio</string>
    <string name="caratula1">caratula1</string>
    <string name="imagif">imagif</string>
</resources>
