<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/datos_del_creador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:textSize="18sp"
            android:textStyle="bold" android:textColor="?attr/colorAccent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:id="@+id/linearLayout3">
        <TextView
                android:text="@string/nombre_sergio_ramirez_cruz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/testView16" android:textSize="16sp"
                android:textColor="?attr/colorPrimaryDark" android:textStyle="bold"/>
        <TextView
                android:text="@string/domicilio_granada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView17" android:textSize="16sp"
                android:textColor="?attr/colorPrimaryDark" android:textStyle="bold"/>
        <TextView
                android:text="@string/empresa_ies_francisco_ayala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView18" android:textSize="16sp"
                android:textColor="?attr/colorPrimaryDark" android:textStyle="bold"/>
        <TextView
                android:text="@string/correo_sergioramicruz_gmail_com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView20" android:textSize="16sp"
                android:textColor="?attr/colorPrimaryDark" android:textStyle="bold"/>
        <TextView
                android:text="@string/telefono_605349612"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView21" android:textSize="16sp"
                android:textStyle="bold" android:textColor="?attr/colorPrimaryDark"/>
    </LinearLayout>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@android:color/holo_orange_light"
            android:id="@+id/imageGif" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="98dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/GIF"/>
</android.support.constraint.ConstraintLayout>