<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:background="@drawable/fondo">

    <TextView
            android:text="@string/titulo"
            android:layout_width="100dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="26dp"
            android:layout_marginStart="12dp" android:id="@+id/textView2" android:textSize="18sp"
            android:textStyle="bold" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/genero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:id="@+id/textView3" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textStyle="bold"
            android:textColor="@android:color/white" android:textSize="18sp"/>
    <TextView
            android:text="@string/precio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:id="@+id/textView4" android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/foto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/txtTitulo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp" android:hint="@string/introduzca_el_titulo"
            android:textColor="?attr/colorAccent"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtDuracion"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" android:hint="@string/introduzca_el_precio"
            android:textColor="?attr/colorAccent"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtGenero"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textUri|textPersonName"
            android:ems="10"
            android:id="@+id/urlFoto"
            app:layout_constraintTop_toBottomOf="@+id/txtDuracion" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:hint="@string/introduzca_url_de_foto" android:textColor="?attr/colorAccent"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <Button
            android:text="@string/addjuego"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnAdd" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            style="@android:style/Widget.Material.Light.Button.Inset" android:textSize="24sp" android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:background="@drawable/botones" android:textColor="?android:attr/colorBackground"/>
    <ImageView
            android:layout_width="250dp"
            android:layout_height="210dp" app:srcCompat="@drawable/imgnotfound"
            android:id="@+id/ivCaratula" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/urlFoto" android:background="?attr/colorAccent"
            tools:srcCompat="@drawable/imgnotfound"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="8dp" android:contentDescription="@string/caratula1"/>
    <TextView
            android:text="@string/caratula"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:textSize="18sp"
            android:textStyle="bold" android:textColor="?android:attr/colorBackground"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <Spinner
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:id="@+id/txtGenero"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="#ffbb33"/>
</android.support.constraint.ConstraintLayout>