<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".tabs.CatalogoFragment"
             android:theme="@style/AppTheme">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/imagen"
                android:layout_width="110dp"
                android:layout_height="25dp" android:id="@+id/textView7" android:textStyle="bold"
                android:textSize="18sp" android:textColor="?attr/colorPrimary"
                android:background="@android:color/white"/>
        <TextView
                android:text="@string/titulo"
                android:layout_width="120dp"
                android:layout_height="25dp" android:id="@+id/textView8" android:layout_weight="1"
                android:textStyle="bold" android:textSize="18sp" android:textColor="?attr/colorPrimary"
                android:background="@android:color/white"/>
        <TextView
                android:text="@string/genero"
                android:layout_width="70dp"
                android:layout_height="25dp" android:id="@+id/textView9" android:layout_weight="1"
                android:textStyle="bold" android:textSize="18sp" android:textColor="?attr/colorPrimary"
                android:background="@android:color/white"/>
        <TextView
                android:text="@string/euros"
                android:layout_width="30dp"
                android:layout_height="25dp" android:id="@+id/textView10" android:layout_weight="1"
                android:textStyle="bold" android:textSize="18sp" android:textColor="?attr/colorPrimary"
                android:background="@android:color/white" android:textAlignment="center"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RecyclerJuegos" android:visibility="visible" android:background="@drawable/fondo"
            android:layout_marginTop="25dp">
    </android.support.v7.widget.RecyclerView>
</FrameLayout>