<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:theme="@style/AppTheme">

        <TextView
                android:text="@string/bienvenido"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="50sp"
                android:textStyle="bold" android:textColor="?attr/colorPrimary"
                android:layout_marginTop="25dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textAlignment="center"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="292dp" app:srcCompat="@drawable/principal"
                android:id="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:contentDescription="@string/principal"
                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.0"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:srcCompat="?attr/colorAccent" android:id="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/imagif"/>
    </android.support.constraint.ConstraintLayout>



</FrameLayout>