<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:id="@+id/linearLayout">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="100dp" app:srcCompat="@drawable/facebook" android:id="@+id/imageView3"
                android:layout_weight="1"/>
        <Button
                android:text="@string/share_on_facebook"
                android:layout_width="120dp"
                android:layout_height="match_parent" android:id="@+id/btnFace" android:layout_weight="1"
                style="@android:style/Widget.Material.Light.Button.Inset" android:textSize="18sp"
                android:textStyle="bold" android:background="@drawable/botones"
                android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/linearLayout2">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="100dp" app:srcCompat="@drawable/twitter" android:id="@+id/imageView4"
                android:layout_weight="1"/>
        <Button
                android:text="@string/share_on_twitter"
                android:layout_width="120dp"
                android:layout_height="match_parent" android:layout_weight="1"
                style="@android:style/Widget.Material.Light.Button.Inset" android:background="@drawable/botones"
                android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white"
                android:id="@+id/btnTwit"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="100dp" app:srcCompat="@drawable/wasap" android:id="@+id/imageView5"
                android:layout_weight="1"/>
        <Button
                android:text="@string/share_on_whatsapp"
                android:layout_width="120dp"
                android:layout_height="match_parent" android:id="@+id/btnWasap" android:layout_weight="1"
                style="@android:style/Widget.Material.Light.Button.Inset" android:background="@drawable/botones"
                android:textStyle="bold" android:textSize="18sp" android:textColor="@android:color/white"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>